# DT42_PIGGY_API

./: .gitignore  .pylintrc  Dockerfile  README.md  consumer.py  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  launcher_quit.py  meta.json  nginx.conf  package.json  pyproject.toml
.github/workflows/: dockerimage.yml  mysql.yml
commands/: create_user.py
config/: config.py  demo.config  dev.py  meta.json  prod.py  pytest.py
environment/: .env.pytest
fixtures/: init.sql  stored_procedures.sql
project/: app.py  database.py  middleware.py  resources.py  utils.py
tests/: test_main.py
